# discord_typer

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  discord_typer.pro
cmake/: windows-toolchain.cmake
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
